kubernetes/platforms-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: platforms-lb
spec:
  type: LoadBalancer
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 8080
      targetPort: 8080
