kubernetes/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:4-management
          ports:
            - containerPort: 15672
              name: rmq-mgmt-port
            - containerPort: 5672
              name: rmq-msg-port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip
spec:
  selector:
    app: rabbitmq
  ports:
    - name: rmq-mgmt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rmq-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-lb
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
    - port: 15672
      targetPort: 15672
      name: rmq-mgmt-port
    - port: 5672
      targetPort: 5672
      name: rmq-msg-port
