kubernetes/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: platforms
spec:
  parentRefs:
    - name: ms-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/p
      backendRefs:
        - name: platforms-clusterip
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: commands
spec:
  parentRefs:
    - name: ms-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/c
      backendRefs:
        - name: commands-clusterip
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seq
spec:
  parentRefs:
    - name: ms-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /seq
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: seq-clusterip
          port: 80
